--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.4/examples/album/ -->
 <html lang="en">
   <head>
+    
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <meta
@@ -29,6 +30,10 @@
       crossorigin="anonymous"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+        
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
@@ -66,6 +71,8 @@
     />
     <meta name="theme-color" content="#563d7c" />
 
+    <link rel="stylesheet" href="src/index.scss">
+
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -87,47 +94,6 @@
 
   <body cz-shortcut-listen="true">
     <header>
-      <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-md-7 py-4">
-              <h4 class="text-white">About</h4>
-              <p class="text-muted">
-                Add some information about the album below, the author, or any
-                other background context. Make it a few sentences long so folks
-                can pick up some informative tidbits. Then, link them off to
-                some social networking sites or contact information.
-              </p>
-            </div>
-            <div class="col-sm-4 offset-md-1 py-4">
-              <h4 class="text-white">Contact</h4>
-              <ul class="list-unstyled">
-                <li>
-                  <a
-                    href="https://getbootstrap.com/docs/4.4/examples/album/#"
-                    class="text-white"
-                    >Follow on Twitter</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://getbootstrap.com/docs/4.4/examples/album/#"
-                    class="text-white"
-                    >Like on Facebook</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://getbootstrap.com/docs/4.4/examples/album/#"
-                    class="text-white"
-                    >Email me</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
           <!-- TODO: change url -->
@@ -137,43 +103,27 @@
           >
           <strong>Point Keeper</strong>
           </a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#D6D5C9" class="bi bi-gear-fill" viewBox="0 0 16 16">
+            <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+          </svg>
         </div>
       </div>
     </header>
 
     <main role="main">
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1>Card Games</h1>
+        <div class="container text-center">
+          <h1 class="title">Card Games</h1>
         </div>
-      </section>
 
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <svg
-                  class="bd-placeholder-img card-img-top"
-                  width="100%"
-                  height="225"
-                  xmlns="http://www.w3.org/2000/svg"
-                  preserveAspectRatio="xMidYMid slice"
-                  focusable="false"
-                  role="img"
-                  aria-label="Placeholder: Thumbnail"
-                >
-                  <title>Placeholder</title>
-                  <rect width="100%" height="100%" fill="#55595c"></rect>
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                    Thumbnail
-                  </text>
-                </svg>
+                <img class="thumbnail" src="/public/Euchre.jpg"></img>
                 <div class="card-body">
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    Euchre
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -203,7 +153,7 @@
                   class="bd-placeholder-img card-img-top"
                   width="100%"
                   height="225"
-                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns="euchre.jfif"
                   preserveAspectRatio="xMidYMid slice"
                   focusable="false"
                   role="img"
